'Wiki' terminada y logo actualizado

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -6,6 +6,12 @@
 
 }
 
+.brand-logo {
+  height: 50px;         
+  width:  auto;          
+  object-fit: contain;   
+  display: block;        
+}
 
 .footer-text {
   color: #aaa;
