--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,9 @@
 
     <!-- Logo y texto -->
     <div class="d-flex align-items-center gap-2 mb-3 mb-md-0">
-      <i class="bi bi-arrows-fullscreen text-white fs-4"></i>
+      <a class="navbar-brand d-flex align-items-center me-3" routerLink="/">
+        <img src="assets/images/RJK-logo.png" alt="Logo RJK SCORE" class="brand-logo" />
+      </a>
       <span class="footer-text">© 2025 YourSite. All rights reserved.</span>
     </div>
 
