--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -30,14 +30,12 @@
 
 .btn-login {
   background-color: transparent;
-  color: #cddc39;
   border: 2px solid #cddc39;
-  border-radius: 0.25rem;
-  padding: 0.5rem 1rem;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  text-align: center;
+  color: #cddc39;
+  border-radius: 50px;
+  padding: 6px 16px;
+  font-weight: 600;
+  transition: all 0.3s ease;
 }
 
 .btn-login:hover,
@@ -59,7 +57,7 @@
   transition: all 0.3s ease;
 }
 
-.btn-register:hover {
+.btn-register:hover , .btn-login:hover{
   background-color: #cddc39;
   color: #000;
   box-shadow: 0 0 10px #cddc39;
@@ -177,4 +175,28 @@
     left: 50%;
     transform: translateX(-50%);
   }
+@media (max-width: 991px) {
+  .navbar-toggler {
+    margin-left: auto;
+    border: 2px solid #cddc39;
+    border-radius: 8px;
+  }
+
+  .navbar-collapse .btn {
+    width: 80%;
+    max-width: 250px;
+    margin: 0 auto 0.5rem;
+    text-align: center;
+  }
+
+  .navbar-collapse .virtual-coins {
+    justify-content: center;
+    margin-bottom: 0.5rem;
+  }
+
+  .navbar-nav .nav-link {
+    padding: 0.5rem 1rem;
+  }
+}
+
 }
