--- a/src/app/sections/home/home.component.html
+++ b/src/app/sections/home/home.component.html
@@ -224,7 +224,7 @@
       </div>
     </div>
   </section>
-  <section class="section-rewards py-5 bg-black mb-5">
+  <section class="section-rewards py-5 bg-black">
     <div class="container">
       <h2 class="section-title mb-4">REWARDS</h2>
       <div class="row g-4 justify-content-center">
