--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
-<div class="content-wrapper">
-  <router-outlet></router-outlet>
+<div class="page-container">
+  <app-header></app-header>
+
+  <div class="content-wrapper">
+    <router-outlet></router-outlet>
+  </div>
+
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
