--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="page-container">
   <app-header></app-header>
 
-  <div class="content-wrapper">
+  <div >
     <router-outlet></router-outlet>
   </div>
 
